[tool.poetry]
name = "tanker-native-sdk"
version = "0.1.0"
description = "C++ client for Tanker"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = { version = ">= 2021.11.3803", source = "gitlab" }
tankeradminsdk = { version = "1.0.0", source = "gitlab" }
python-gitlab = "^2.0.0"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
mypy = "^0.790"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
