[tool.poetry]
name = "tanker-native-sdk"
version = "0.1.0"
description = "C++ client for Tanker"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = { version = "2022.6.dev4320", source = "gitlab" }

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"
secondary = true

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.942"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
