[tool.poetry]
name = "tanker-native-sdk"
version = "0.1.0"
description = "C++ client for Tanker"
authors = ["Tanker team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

tankerci = { version = "== 2024.12.5467", source = "gitlab" }

[tool.poetry.dev-dependencies]
black = "24.3.0"
flake8 = "7"
flake8-comprehensions = "3.14.0"
isort = "5.10.1"
mypy = "1.5"
node-semver = "0.6.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
